--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 		<link rel="stylesheet" href="stylesheets/buttons.css">
 	</head>
 	<body>
-		<div class="sharing-buttons">
+		<div class="sharing-buttons horiz">
+			<a href="">
+				<p>Twitter</p>
+			</a>
+			<a href="">
+				<p>Facebook</p>
+			</a>
+			<a href="">
+				<p>Google Plus</p>
+			</a>
+			<a href="">
+				<p>Linked in</p>
+			</a>
+		</div>
+
+		<div class="sharing-buttons vert">
 			<a href="">
 				<p>Twitter</p>
 			</a>
