added wordpress dynamic urls

--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
 	</head>
 	<body>
 		<div class="sharing-buttons horiz">
-			<a href="">
+			<a href="https://twitter.com/intent/tweet?text=<?php the_title( ); ?>&via=jonjoe &url=<?php echo get_permalink(); ?>">
 				<p>Twitter</p>
 			</a>
-			<a href="">
+			<a href="https://www.facebook.com/sharer/sharer.php? u=<?php echo get_permalink(); ?>">
 				<p>Facebook</p>
 			</a>
-			<a href="">
+			<a href="https://plus.google.com/share?url=<?php echo get_permalink(); ?>">
 				<p>Google Plus</p>
 			</a>
-			<a href="">
+			<a href="http://www.linkedin.com/shareArticle?url=<?php echo get_permalink(); ?>&title=<?php the_title( ); ?>">
 				<p>Linked in</p>
 			</a>
 		</div>
 
-		<div class="sharing-buttons vert">
-			<a href="">
+		<<div class="sharing-buttons vert">
+			<a href="https://twitter.com/intent/tweet?text=<?php the_title( ); ?>&via=jonjoe &url=<?php echo get_permalink(); ?>">
 				<p>Twitter</p>
 			</a>
-			<a href="">
+			<a href="https://www.facebook.com/sharer/sharer.php? u=<?php echo get_permalink(); ?>">
 				<p>Facebook</p>
 			</a>
-			<a href="">
+			<a href="https://plus.google.com/share?url=<?php echo get_permalink(); ?>">
 				<p>Google Plus</p>
 			</a>
-			<a href="">
+			<a href="http://www.linkedin.com/shareArticle?url=<?php echo get_permalink(); ?>&title=<?php the_title( ); ?>">
 				<p>Linked in</p>
 			</a>
 		</div>
